force-app/main/default/objects/ProductOffers__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>If Expired__c field checked so this meaning is TRUE then this formula make it FALSE with NOT</description>
    <formula>NOT(Discount__r.Expired__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This Product Offer is Active If its checked</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>