force-app/main/default/objects/ProductOffers__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Offer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Coupon__c.Expired__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>If the Expired Field is TRUE (Checked), these data don&apos;t show to the users with this filter.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Product Offers</relationshipLabel>
    <relationshipName>Product_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>